manifests/chatsocket-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatsocket-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatsocket
  template:
    metadata:
      labels:
        app: chatsocket
    spec:
      containers:
        - name: chatsocket
          image: jestrella/chatsocket:v10
          ports:
          - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
