manifests/chatsocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatsocket-service
  namespace: default
spec:
  selector:
    app: chatsocket
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
