manifests/chatsocket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatsocket-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: chat.teides.com
    external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  rules:
  - host: chat.teides.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatsocket-service
            port:
              number: 80
  tls:
    - hosts:
        - chat.teides.com
      secretName: chat-tls
